# ROSjects

./: README.md
Wall Following Robot/src/custom_interfaces/: CMakeLists.txt  package.xml  wall_follower2.cpp
Wall Following Robot/src/wall_follower_pkg/: CMakeLists.txt  package.xml
Wall Following Robot/src/wall_follower_pkg/launch/: findwall_server.launch.py  main.launch.py  odomrecord_server.launch.py  wall_follower.launch.py
Wall Following Robot/src/wall_follower_pkg/src/: findwall_server.cpp  odomrecord_server.cpp  wall_follower.cpp
kinematics_basic_concepts/: ik_planar_arm.py  move.py
kinematics_basic_concepts/launch/: circular_motion.launch  planar_end_effector.launch
kinematics_basic_concepts/scripts/: circular_motion_ee.py  planar_end_effector_mover.py
kinematics_basic_concepts/scripts/past scripts/: calculate_basic_rotation.py  fk_planar_arm.py  homogenous_matrix_test.py  rotate_daruma.py
